Fixed the visibility of the markers with some CSS and added rotation to the random placement of stones

--- a/theme/styles.css
+++ b/theme/styles.css
@@ -1,32 +1,149 @@
-/* Define the stones */
+
+/* Stones */
 
 /* Black stone */
 .shudan-stone-image.shudan-sign_1 {
   background-image: url('./black_stone.png');
 }
-
+/* Dead/dimmed Black stones */
 .shudan-vertex.shudan-dimmed .shudan-stone-image.shudan-sign_1 {
  background-image: url('./zombie_black_stone.png');
 }
-
 /* White stone */
 .shudan-stone-image.shudan-sign_-1 {
   background-image: url('./white_stone.png');
 }
-
+/* Dead/dimmed White stones */
 .shudan-vertex.shudan-dimmed .shudan-stone-image.shudan-sign_-1 {
  background-image: url('./zombie_white_stone.png');
 }
 
 
-/* Board */
+/* Random rotations for each stone */
+.shudan-stone-image.shudan-sign_1.shudan-random_1,
+.shudan-stone-image.shudan-sign_-1.shudan-random_1 {
+  transform: rotate(4deg);
+}
+.shudan-stone-image.shudan-sign_1.shudan-random_2,
+.shudan-stone-image.shudan-sign_-1.shudan-random_2 {
+  transform: rotate(-4deg);
+}
+.shudan-stone-image.shudan-sign_1.shudan-random_3,
+.shudan-stone-image.shudan-sign_-1.shudan-random_3 {
+  transform: rotate(8deg);
+}
+.shudan-stone-image.shudan-sign_1.shudan-random_4,
+.shudan-stone-image.shudan-sign_-1.shudan-random_4 {
+  transform: rotate(-8deg);
+}
+
+
+
+
+
+/* Markers */
+
+/* ALL markers*/
+.shudan-vertex .shudan-marker::before,
+.shudan-vertex .shudan-marker::after,
+.shudan-vertex.shudan-sign_1 .shudan-marker::before,
+.shudan-vertex.shudan-sign_1 .shudan-marker::after,
+.shudan-vertex.shudan-sign_-1 .shudan-marker::before,
+.shudan-vertex.shudan-sign_-1 .shudan-marker::after {
+  background: transparent;
+  border-color: var(--shudan-marker-foreground-color);
+  color: var(--shudan-marker-foreground-color);
+}
+
+
+
+/* Point */
+.shudan-vertex.shudan-marker_point .shudan-marker,
+.shudan-vertex.shudan-marker_point.shudan-sign_1 .shudan-marker,
+.shudan-vertex.shudan-marker_point.shudan-sign_-1 .shudan-marker {
+  background: var(--shudan-black-foreground-color);
+  box-shadow: 0 0 0 0.04em var(--shudan-marker-background-color);
+}
+
+
+
+/* Cross*/
+/* TODO, get rid of the board clearing*/
+.shudan-vertex.shudan-marker_cross .shudan-marker::before,
+.shudan-vertex.shudan-marker_cross .shudan-marker::after {
+  box-shadow: 0 0 0 0.04em var(--shudan-marker-background-color);
+}
+
+/* Square, Circle & Loader */
+.shudan-vertex.shudan-marker_square .shudan-marker::before,
+.shudan-vertex.shudan-marker_circle .shudan-marker::before,
+.shudan-vertex.shudan-marker_loader .shudan-marker::before {
+  box-shadow:
+    0 0 0 0.04em var(--shudan-marker-background-color) inset,
+    0 0 0 0.04em var(--shudan-marker-background-color);
+}
+
+
+/* Triangle
+  This one sucks the most!
+  https://css-tricks.com/snippets/css/css-triangle/
+  https://stackoverflow.com/a/27985211
+  TODO fix the triangle on the stones
+*/
+.shudan-vertex.shudan-marker_triangle .shudan-marker::before {
+    border-bottom-color: var(--shudan-marker-background-color);
+}
+.shudan-vertex.shudan-marker_triangle .shudan-marker::after{
+    border-bottom-color: var(--shudan-marker-foreground-color);
+}
+.shudan-vertex.shudan-marker_triangle.shudan-sign_1 .shudan-marker::after
+.shudan-vertex.shudan-marker_triangle.shudan-sign_-1 .shudan-marker::after {
+  border-bottom-color: var(--shudan-marker-foreground-color);
+}
+
+
+
+/* Label */
+.shudan-vertex.shudan-marker_label .shudan-marker::before,
+.shudan-vertex.shudan-marker_label .shudan-marker::after {
+  padding: 0.1em; /* slightly larger marker box to compensate for label shadow */
+}
+.shudan-vertex.shudan-marker_label .shudan-marker::before {
+  text-shadow:
+    0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color),
+    0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color),
+    0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color),
+    0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color),
+    0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color), 0 0 0.1em var(--shudan-marker-background-color);
+}
+
+
+
+/* Line & Arrow */
+.shudan-line,
+.shudan-arrow,
+.shudan-arrow::before,
+.shudan-arrow::after {
+  background: var(--shudan-marker-foreground-color);
+  box-shadow: 0 0 0 0.04em var(--shudan-marker-background-color);
+}
+
+
+
+
+
+/* Board
+  - shudan-board-background-color must be similar to the board color
+    it is used to erase spaces on the board for the marks.
+  - shudan-board-foreground-color is normally used for the marks, as well as the
+    board lines, hoshi and coordinates, but we use shudan-marker-foreground-color
+    and shudan-marker-background-color instead.
+*/
 .shudan-goban {
     --shudan-board-border-width: 0;
-    --shudan-board-foreground-color: #222;
 
-    --shudan-black-background-color: #0E0E0E;
-    --shudan-black-foreground-color: #eee;
-
-    --shudan-white-background-color: #EBEBEB;
-    --shudan-white-foreground-color: #222;
+    --shudan-marker-background-color: #111;
+    --shudan-marker-foreground-color: #eee;
 }
+
+
